--- a/Site-Pessoal/index.html
+++ b/Site-Pessoal/index.html
@@ -27,7 +27,7 @@
         </article>
     </section>
     <footer>
-        <ul>
+        <ul class="context_list">
             <li>
                 <a href="mailto:starambients@gmail.com">starambients@gmail.com</a>
             </li>
